deploy/pre-prod/default_constraints.gatekeeper.sh_v1beta1_k8srequiredlabels_pre-prod-cluster-ns-must-have-geo.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: pre-prod-cluster
  labels:
    cluster: pre-prod-cluster
    environment: pre-prod
  name: pre-prod-cluster-ns-must-have-geo
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Namespace
  parameters:
    labels:
    - key: geo
