deploy/pre-prod/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: pre-prod-cluster
  labels:
    cluster: pre-prod-cluster
    environment: pre-prod
    geo: uk
    tenant: tenant-a
  name: pre-prod-cluster-tenant-a
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    environment: pre-prod
  name: datadog
spec:
  selector:
    matchLabels:
      app: datadog
      environment: pre-prod
  template:
    metadata:
      labels:
        app: datadog
        environment: pre-prod
    spec:
      containers:
      - image: httpd
        name: datadog
        ports:
        - containerPort: 80
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  labels:
    environment: pre-prod
  name: ns-must-have-geo
spec:
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Namespace
  parameters:
    labels:
    - key: geo
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    configsync.gke.io/cluster-name-selector: pre-prod-cluster
  labels:
    cluster: pre-prod-cluster
    environment: pre-prod
    geo: uk
    tenant: tenant-a
  name: pre-prod-cluster-default-deny-ingress
  namespace: tenant-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
